crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__self_ref_cycle.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$ref\":\"#\"}"
expression: is_valid_body(schema)
---
validate_ref_0(instance)
