crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__signed_zero_max_length_decimal.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"maxLength\":-0.0,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => s.is_empty(),
            _ => false,
        }
