crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__signed_zero_min_properties_scientific.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"minProperties\":-0.0,\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => true,
            _ => false,
        }
