crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__string_min_and_max_length.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"maxLength\":5,\"minLength\":2,\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => {
                let len = s.chars().count();
                (len as u64) >= 2 && (len as u64) <= 5
            }
            _ => false,
        }
