crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__type_integer_string.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"type\":[\"integer\",\"string\"]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => jsonschema::__private::types::is_integer(n),
            serde_json::Value::String(_) => true,
            _ => false,
        }
