crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__type_number_plus_all.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"type\":[\"number\",\"string\",\"boolean\",\"null\",\"array\",\"object\"]}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Number(_) => true,
            __Value::String(_) => true,
            __Value::Bool(_) => true,
            __Value::Null => true,
            __Value::Array(_) => true,
            __Value::Object(_) => true,
            _ => false,
        }
